syntax = "proto3";

package runmmeta;

import "object_type.proto";
import "partition.proto";
import "permission.proto";
import "wrappers.proto";

message Property {
    string key = 1;
    string value = 2;
}

// Indicates whether a particular property item may be changed or read by a
// class of user
message PropertyPermission {
    string project = 1;
    string role = 2;
    // The read/write permissions on the property. The default permissions for
    // any property on an object is that if a user is allowed to read the
    // object, the user is allowed to read all properties associated with the
    // object. To deny read permission to a particular role or project, a
    // PropertyAccessPermission can be created with a zero-valued permission
    // field, which indicates the role and/or project cannot read the property.
    //
    // 0            No permissions  (used to deny rights to specific project)
    // 1            Read permission
    // 1 << 1       Write permission
    uint32 permission = 3;
}

// All property permissions for a specific property key
message PropertyPermissions {
    string key = 1;
    repeated PropertyPermission permissions = 50;
}
